--- a/pom.xml
+++ b/pom.xml
@@ -61,23 +61,23 @@
 		<java.version>17</java.version>
 
 		<!-- production dependencies -->
-		<spring-framework.version>6.1.0-SNAPSHOT</spring-framework.version>
-		<spring-retry.version>2.0.3-SNAPSHOT</spring-retry.version>
-		<spring-integration.version>6.2.0-SNAPSHOT</spring-integration.version>
-		<micrometer.version>1.12.0-SNAPSHOT</micrometer.version>
+		<spring-framework.version>6.1.0-M4</spring-framework.version>
+		<spring-retry.version>2.0.2</spring-retry.version>
+		<spring-integration.version>6.2.0-M2</spring-integration.version>
+		<micrometer.version>1.12.0-M2</micrometer.version>
 
 		<!-- optional production dependencies -->
-		<spring-data-commons.version>3.2.0-SNAPSHOT</spring-data-commons.version>
-		<spring-data-jpa.version>3.2.0-SNAPSHOT</spring-data-jpa.version>
-		<spring-data-mongodb.version>4.2.0-SNAPSHOT</spring-data-mongodb.version>
-		<spring-kafka.version>3.0.10-SNAPSHOT</spring-kafka.version>
-		<spring-amqp.version>3.0.7-SNAPSHOT</spring-amqp.version>
-		<spring-ldap.version>3.2.0-SNAPSHOT</spring-ldap.version>
+		<spring-data-commons.version>3.2.0-M2</spring-data-commons.version>
+		<spring-data-jpa.version>3.2.0-M2</spring-data-jpa.version>
+		<spring-data-mongodb.version>4.2.0-M2</spring-data-mongodb.version>
+		<spring-kafka.version>3.0.10</spring-kafka.version>
+		<spring-amqp.version>3.0.8</spring-amqp.version>
+		<spring-ldap.version>3.2.0-M2</spring-ldap.version>
 
 		<jackson.version>2.15.2</jackson.version>
 		<avro.version>1.9.2</avro.version> <!-- FIXME build failure with version 1.11.2 -->
 		<gson.version>2.10.1</gson.version>
-		<hibernate-core.version>6.2.6.Final</hibernate-core.version>
+		<hibernate-core.version>6.2.7.Final</hibernate-core.version>
 		<jakarta.annotation-api.version>2.1.1</jakarta.annotation-api.version>
 		<jakarta.mail-api.version>2.1.2</jakarta.mail-api.version>
 		<jakarta.jms-api.version>3.1.0</jakarta.jms-api.version>
@@ -85,20 +85,20 @@
 		<jakarta.persistence-api.version>3.1.0</jakarta.persistence-api.version>
 		<neo4j-ogm-core.version>4.0.6</neo4j-ogm-core.version>
 		<mongodb-driver-sync.version>4.10.2</mongodb-driver-sync.version>
-		<junit-jupiter.version>5.9.3</junit-jupiter.version>
+		<junit-jupiter.version>5.10.0</junit-jupiter.version>
 
 		<!-- provided dependencies -->
 		<jsr305.version>3.0.2</jsr305.version>
 
 		<!-- test dependencies -->
-		<micrometer-tracing.version>1.2.0-SNAPSHOT</micrometer-tracing.version>
+		<micrometer-tracing.version>1.2.0-M2</micrometer-tracing.version>
 
 		<xstream.version>1.4.20</xstream.version>
 		<junit.version>4.13.2</junit.version>
 		<junit-vintage-engine.version>${junit-jupiter.version}</junit-vintage-engine.version>
 		<hamcrest.version>2.2</hamcrest.version>
 		<assertj.version>3.24.2</assertj.version>
-		<mockito.version>5.4.0</mockito.version>
+		<mockito.version>5.5.0</mockito.version>
 		<xmlunit.version>2.9.1</xmlunit.version>
 		<commons-io.version>2.13.0</commons-io.version>
 		<commons-dbcp2.version>2.9.0</commons-dbcp2.version>
@@ -108,7 +108,7 @@
 		<sqlite.version>3.42.0.0</sqlite.version>
 		<derby.version>10.16.1.1</derby.version>
 		<hana.version>2.17.10</hana.version>
-		<artemis.version>2.29.0</artemis.version>
+		<artemis.version>2.30.0</artemis.version>
 		<jaxb-core.version>4.0.3</jaxb-core.version>
 		<log4j.version>2.20.0</log4j.version>
 		<hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
@@ -118,22 +118,22 @@
 		<jakarta.xml.bind-api.version>4.0.0</jakarta.xml.bind-api.version>
 		<angus-mail.version>2.0.2</angus-mail.version>
 		<woodstox-core.version>6.5.1</woodstox-core.version>
-		<aspectj.version>1.9.19</aspectj.version>
-		<mysql-connector-j.version>8.0.33</mysql-connector-j.version>
+		<aspectj.version>1.9.20</aspectj.version>
+		<mysql-connector-j.version>8.1.0</mysql-connector-j.version>
 		<mariadb-java-client.version>3.1.4</mariadb-java-client.version>
 		<postgresql.version>42.6.0</postgresql.version>
 		<db2.version>11.5.8.0</db2.version>
-		<oracle.version>19.19.0.0</oracle.version>
+		<oracle.version>19.20.0.0</oracle.version>
 		<sqlserver.version>11.2.3.jre17</sqlserver.version>
 		<jtds.version>1.3.1</jtds.version>
-		<testcontainers.version>1.18.3</testcontainers.version>
+		<testcontainers.version>1.19.0</testcontainers.version>
 		<jsonassert.version>1.5.1</jsonassert.version>
 
 		<!-- samples dependencies -->
 		<spring-rabbit.version>${spring-amqp.version}</spring-rabbit.version>
 		<quartz.version>2.3.2</quartz.version>
 		<prometheus_pushgateway.version>0.16.0</prometheus_pushgateway.version>
-		<groovy.version>3.0.18</groovy.version>
+		<groovy.version>3.0.19</groovy.version>
 
 		<!-- documentation dependencies -->
 		<asciidoctorj-pdf.version>1.6.2</asciidoctorj-pdf.version> <!-- FIXME build failure with version 2.3.9 -->
@@ -149,9 +149,9 @@
 		<jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
 		<flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
 		<maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
-		<asciidoctor-maven-plugin.version>2.2.3</asciidoctor-maven-plugin.version>
+		<asciidoctor-maven-plugin.version>2.2.4</asciidoctor-maven-plugin.version>
 		<maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
-		<maven-dependency-plugin.version>3.5.0</maven-dependency-plugin.version>
+		<maven-dependency-plugin.version>3.6.0</maven-dependency-plugin.version>
 		<maven-site-plugin.version>3.12.1</maven-site-plugin.version>
 		<maven-project-info-reports-plugin.version>3.4.5</maven-project-info-reports-plugin.version>
 		<maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
