--- a/.github/workflows/documentation-upload.yml
+++ b/.github/workflows/documentation-upload.yml
@@ -25,12 +25,15 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
+      - name: Update release version
+        run: mvn versions:set -DgenerateBackupPoms=false -DnewVersion=$RELEASE_VERSION
+
       - name: Generate Java docs
         run: mvn javadoc:aggregate
 
-      - name: Generate Reference docs
+      - name: Generate Assembly
         working-directory: spring-batch-docs
-        run: mvn site
+        run: mvn assembly:single
 
       - name: Setup SSH key
         env:
@@ -42,19 +45,18 @@ jobs:
           chmod 600 "$HOME/.ssh/key"
           echo "$DOCS_SSH_HOST_KEY" > "$HOME/.ssh/known_hosts"
 
-      - name: Deploy docs and xsd schemas
+      - name: Deploy Java docs and xsd schemas
         env:
           DOCS_HOST: ${{ secrets.DOCS_HOST }}
           DOCS_PATH: ${{ secrets.DOCS_PATH }}
+          DOCS_USERNAME: ${{ secrets.DOCS_USERNAME }}
           BATCH_SCHEMA_PATH: ${{ secrets.BATCH_SCHEMA_PATH }}
           INTEGRATION_SCHEMA_PATH: ${{ secrets.INTEGRATION_SCHEMA_PATH }}
-          DOCS_USERNAME: ${{ secrets.DOCS_USERNAME }}
         working-directory: spring-batch-docs/target
         run: |
-          unzip spring-batch-$RELEASE_VERSION-docs.zip
-          ssh -i $HOME/.ssh/key $DOCS_USERNAME@$DOCS_HOST cd $DOCS_PATH && mkdir $RELEASE_VERSION
-          scp -i $HOME/.ssh/key -r api reference $DOCS_USERNAME@$DOCS_HOST:$DOCS_PATH/$RELEASE_VERSION
-          ssh -i $HOME/.ssh/key $DOCS_USERNAME@$DOCS_HOST rm current && ln -s $RELEASE_VERSION current
+          unzip spring-batch-$RELEASE_VERSION-javadocs.zip
+          ssh -i $HOME/.ssh/key $DOCS_USERNAME@$DOCS_HOST cd $DOCS_PATH && mkdir -p $RELEASE_VERSION
+          scp -i $HOME/.ssh/key -r api $DOCS_USERNAME@$DOCS_HOST:$DOCS_PATH/$PROJECT_VERSION
           
           unzip spring-batch-$RELEASE_VERSION-schemas.zip
           scp -i $HOME/.ssh/key batch/*.xsd $DOCS_USERNAME@$DOCS_HOST:$BATCH_SCHEMA_PATH
