--- a/spring-batch-docs/pom.xml
+++ b/spring-batch-docs/pom.xml
@@ -47,6 +47,14 @@
                     <appendAssemblyId>true</appendAssemblyId>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>${maven-deploy-plugin.version}</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
