--- a/pom.xml
+++ b/pom.xml
@@ -61,57 +61,57 @@
 		<java.version>17</java.version>
 
 		<!-- production dependencies -->
-		<spring-framework.version>6.1.0-SNAPSHOT</spring-framework.version>
-		<spring-retry.version>2.0.4-SNAPSHOT</spring-retry.version>
-		<spring-integration.version>6.2.0-SNAPSHOT</spring-integration.version>
-		<micrometer.version>1.12.0-SNAPSHOT</micrometer.version>
+		<spring-framework.version>6.1.0-RC1</spring-framework.version>
+		<spring-retry.version>2.0.4</spring-retry.version>
+		<spring-integration.version>6.2.0-RC1</spring-integration.version>
+		<micrometer.version>1.12.0-RC1</micrometer.version>
 
 		<!-- optional production dependencies -->
-		<spring-data-commons.version>3.2.0-SNAPSHOT</spring-data-commons.version>
-		<spring-data-jpa.version>3.2.0-SNAPSHOT</spring-data-jpa.version>
-		<spring-data-redis.version>3.2.0-SNAPSHOT</spring-data-redis.version>
-		<spring-data-mongodb.version>4.2.0-SNAPSHOT</spring-data-mongodb.version>
-		<spring-kafka.version>3.1.0-SNAPSHOT</spring-kafka.version>
-		<spring-amqp.version>3.1.0-SNAPSHOT</spring-amqp.version>
-		<spring-ldap.version>3.2.0-SNAPSHOT</spring-ldap.version>
+		<spring-data-commons.version>3.2.0-RC1</spring-data-commons.version>
+		<spring-data-jpa.version>3.2.0-RC1</spring-data-jpa.version>
+		<spring-data-redis.version>3.2.0-RC1</spring-data-redis.version>
+		<spring-data-mongodb.version>4.2.0-RC1</spring-data-mongodb.version>
+		<spring-kafka.version>3.1.0-RC1</spring-kafka.version>
+		<spring-amqp.version>3.1.0-RC1</spring-amqp.version>
+		<spring-ldap.version>3.2.0-RC1</spring-ldap.version>
 
-		<jackson.version>2.15.2</jackson.version>
+		<jackson.version>2.15.3</jackson.version>
 		<avro.version>1.11.3</avro.version>
 		<gson.version>2.10.1</gson.version>
-		<hibernate-core.version>6.2.8.Final</hibernate-core.version>
+		<hibernate-core.version>6.3.1.Final</hibernate-core.version>
 		<jakarta.annotation-api.version>2.1.1</jakarta.annotation-api.version>
 		<jakarta.mail-api.version>2.1.2</jakarta.mail-api.version>
 		<jakarta.jms-api.version>3.1.0</jakarta.jms-api.version>
 		<jakarta.validation-api.version>3.0.2</jakarta.validation-api.version>
 		<jakarta.persistence-api.version>3.1.0</jakarta.persistence-api.version>
-		<neo4j-ogm-core.version>4.0.6</neo4j-ogm-core.version>
-		<mongodb-driver-sync.version>4.10.2</mongodb-driver-sync.version>
+		<neo4j-ogm-core.version>4.0.8</neo4j-ogm-core.version>
+		<mongodb-driver-sync.version>4.11.0</mongodb-driver-sync.version>
 		<junit-jupiter.version>5.10.0</junit-jupiter.version>
 
 		<!-- provided dependencies -->
 		<jsr305.version>3.0.2</jsr305.version>
 
 		<!-- test dependencies -->
-		<micrometer-tracing.version>1.2.0-SNAPSHOT</micrometer-tracing.version>
+		<micrometer-tracing.version>1.2.0-RC1</micrometer-tracing.version>
 
 		<xstream.version>1.4.20</xstream.version>
 		<junit.version>4.13.2</junit.version>
 		<junit-vintage-engine.version>${junit-jupiter.version}</junit-vintage-engine.version>
 		<hamcrest.version>2.2</hamcrest.version>
 		<assertj.version>3.24.2</assertj.version>
-		<mockito.version>5.5.0</mockito.version>
+		<mockito.version>5.6.0</mockito.version>
 		<xmlunit.version>2.9.1</xmlunit.version>
-		<commons-io.version>2.13.0</commons-io.version>
+		<commons-io.version>2.14.0</commons-io.version>
 		<commons-dbcp2.version>2.10.0</commons-dbcp2.version>
 		<slf4j.version>2.0.9</slf4j.version>
 		<hsqldb.version>2.7.2</hsqldb.version>
 		<h2.version>2.2.224</h2.version>
-		<sqlite.version>3.43.0.0</sqlite.version>
+		<sqlite.version>3.43.2.0</sqlite.version>
 		<derby.version>10.16.1.1</derby.version>
-		<hana.version>2.17.12</hana.version>
-		<artemis.version>2.30.0</artemis.version>
+		<hana.version>2.18.13</hana.version>
+		<artemis.version>2.31.0</artemis.version>
 		<jaxb-core.version>4.0.3</jaxb-core.version>
-		<log4j.version>2.20.0</log4j.version>
+		<log4j.version>2.21.0</log4j.version>
 		<hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
 		<jakarta.el-api.version>5.0.1</jakarta.el-api.version>
 		<jakarta.el.version>4.0.2</jakarta.el.version>
@@ -127,7 +127,7 @@
 		<oracle.version>19.20.0.0</oracle.version>
 		<sqlserver.version>11.2.3.jre17</sqlserver.version>
 		<jtds.version>1.3.1</jtds.version>
-		<testcontainers.version>1.19.0</testcontainers.version>
+		<testcontainers.version>1.19.1</testcontainers.version>
 		<jsonassert.version>1.5.1</jsonassert.version>
 
 		<!-- samples dependencies -->
