--- a/spring-batch-docs/pom.xml
+++ b/spring-batch-docs/pom.xml
@@ -21,6 +21,15 @@
                 <artifactId>antora-maven-plugin</artifactId>
                 <version>${io.spring.maven.antora-version}</version>
                 <extensions>true</extensions>
+                <configuration>
+                    <packages>
+                        <package>@antora/atlas-extension@1.0.0-alpha.1</package>
+                        <package>@antora/collector-extension@1.0.0-alpha.3</package>
+                        <package>@asciidoctor/tabs@1.0.0-beta.3</package>
+                        <package>@springio/antora-extensions@1.7.0</package>
+                        <package>@springio/asciidoctor-extensions@1.0.0-alpha.9</package>
+                    </packages>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>io.spring.maven.antora</groupId>
