--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,8 @@ allprojects {
 
 	repositories {
 		mavenCentral()
-		maven { url 'https://repo.spring.io/libs-snapshot' }
-		maven { url 'https://repo.spring.io/libs-milestone' }
+		maven { url 'https://repo.spring.io/snapshot' }
+		maven { url 'https://repo.spring.io/milestone' }
 		maven { url 'https://repo.spring.io/plugins-release' }
 	}
 
