--- a/pom.xml
+++ b/pom.xml
@@ -61,19 +61,19 @@
 		<java.version>17</java.version>
 
 		<!-- production dependencies -->
-		<spring-framework.version>6.1.4</spring-framework.version>
-		<spring-retry.version>2.0.5</spring-retry.version>
-		<spring-integration.version>6.2.2</spring-integration.version>
-		<micrometer.version>1.12.3</micrometer.version>
+		<spring-framework.version>6.1.7-SNAPSHOT</spring-framework.version>
+		<spring-retry.version>2.0.6-SNAPSHOT</spring-retry.version>
+		<spring-integration.version>6.2.5-SNAPSHOT</spring-integration.version>
+		<micrometer.version>1.12.6-SNAPSHOT</micrometer.version>
 
 		<!-- optional production dependencies -->
-		<spring-data-commons.version>3.2.3</spring-data-commons.version>
-		<spring-data-jpa.version>3.2.3</spring-data-jpa.version>
-		<spring-data-redis.version>3.2.3</spring-data-redis.version>
-		<spring-data-mongodb.version>4.2.3</spring-data-mongodb.version>
-		<spring-kafka.version>3.1.2</spring-kafka.version>
-		<spring-amqp.version>3.1.2</spring-amqp.version>
-		<spring-ldap.version>3.2.2</spring-ldap.version>
+		<spring-data-commons.version>3.2.6-SNAPSHOT</spring-data-commons.version>
+		<spring-data-jpa.version>3.2.6-SNAPSHOT</spring-data-jpa.version>
+		<spring-data-redis.version>3.2.6-SNAPSHOT</spring-data-redis.version>
+		<spring-data-mongodb.version>4.2.6-SNAPSHOT</spring-data-mongodb.version>
+		<spring-kafka.version>3.1.5-SNAPSHOT</spring-kafka.version>
+		<spring-amqp.version>3.1.5-SNAPSHOT</spring-amqp.version>
+		<spring-ldap.version>3.2.4-SNAPSHOT</spring-ldap.version>
 
 		<jackson.version>2.15.4</jackson.version>
 		<avro.version>1.11.3</avro.version>
@@ -92,7 +92,7 @@
 		<jsr305.version>3.0.2</jsr305.version>
 
 		<!-- test dependencies -->
-		<micrometer-tracing.version>1.2.3</micrometer-tracing.version>
+		<micrometer-tracing.version>1.2.6-SNAPSHOT</micrometer-tracing.version>
 
 		<xstream.version>1.4.20</xstream.version>
 		<junit.version>4.13.2</junit.version>
