--- a/.github/workflows/continuous-integration-50x.yml
+++ b/.github/workflows/continuous-integration-50x.yml
@@ -55,7 +55,7 @@ jobs:
         working-directory: spring-batch-docs/target
         run: |
           unzip spring-batch-$PROJECT_VERSION-docs.zip
-          ssh -i $HOME/.ssh/key $DOCS_USERNAME@$DOCS_HOST cd $DOCS_PATH && mkdir -p $PROJECT_VERSION/api
+          ssh -i $HOME/.ssh/key $DOCS_USERNAME@$DOCS_HOST "cd $DOCS_PATH && mkdir -p $PROJECT_VERSION/api"
           scp -i $HOME/.ssh/key -r api $DOCS_USERNAME@$DOCS_HOST:$DOCS_PATH/$PROJECT_VERSION/api
           scp -i $HOME/.ssh/key -r reference $DOCS_USERNAME@$DOCS_HOST:$DOCS_PATH/$PROJECT_VERSION
-          ssh -i $HOME/.ssh/key $DOCS_USERNAME@$DOCS_HOST cd $DOCS_PATH && ln -s $PROJECT_VERSION 5.0.x-SNAPSHOT
+          ssh -i $HOME/.ssh/key $DOCS_USERNAME@$DOCS_HOST "cd $DOCS_PATH && ln -s $PROJECT_VERSION 5.0.x-SNAPSHOT"
