--- a/pom.xml
+++ b/pom.xml
@@ -61,38 +61,38 @@
 		<java.version>17</java.version>
 
 		<!-- production dependencies -->
-		<spring-framework.version>6.1.7-SNAPSHOT</spring-framework.version>
-		<spring-retry.version>2.0.6-SNAPSHOT</spring-retry.version>
-		<spring-integration.version>6.2.5-SNAPSHOT</spring-integration.version>
-		<micrometer.version>1.12.6-SNAPSHOT</micrometer.version>
+		<spring-framework.version>6.1.7</spring-framework.version>
+		<spring-retry.version>2.0.6</spring-retry.version>
+		<spring-integration.version>6.2.5</spring-integration.version>
+		<micrometer.version>1.12.6</micrometer.version>
 
 		<!-- optional production dependencies -->
-		<spring-data-commons.version>3.2.6-SNAPSHOT</spring-data-commons.version>
-		<spring-data-jpa.version>3.2.6-SNAPSHOT</spring-data-jpa.version>
-		<spring-data-redis.version>3.2.6-SNAPSHOT</spring-data-redis.version>
-		<spring-data-mongodb.version>4.2.6-SNAPSHOT</spring-data-mongodb.version>
-		<spring-kafka.version>3.1.5-SNAPSHOT</spring-kafka.version>
-		<spring-amqp.version>3.1.5-SNAPSHOT</spring-amqp.version>
-		<spring-ldap.version>3.2.4-SNAPSHOT</spring-ldap.version>
+		<spring-data-commons.version>3.2.6</spring-data-commons.version>
+		<spring-data-jpa.version>3.2.6</spring-data-jpa.version>
+		<spring-data-redis.version>3.2.6</spring-data-redis.version>
+		<spring-data-mongodb.version>4.2.6</spring-data-mongodb.version>
+		<spring-kafka.version>3.1.5</spring-kafka.version>
+		<spring-amqp.version>3.1.5</spring-amqp.version>
+		<spring-ldap.version>3.2.3</spring-ldap.version>
 
 		<jackson.version>2.15.4</jackson.version>
 		<avro.version>1.11.3</avro.version>
 		<gson.version>2.10.1</gson.version>
 		<hibernate-core.version>6.3.2.Final</hibernate-core.version>
 		<jakarta.annotation-api.version>2.1.1</jakarta.annotation-api.version>
-		<jakarta.mail-api.version>2.1.2</jakarta.mail-api.version>
+		<jakarta.mail-api.version>2.1.3</jakarta.mail-api.version>
 		<jakarta.jms-api.version>3.1.0</jakarta.jms-api.version>
 		<jakarta.validation-api.version>3.0.2</jakarta.validation-api.version>
 		<jakarta.persistence-api.version>3.1.0</jakarta.persistence-api.version>
-		<neo4j-ogm-core.version>4.0.9</neo4j-ogm-core.version>
-		<mongodb-driver-sync.version>4.11.1</mongodb-driver-sync.version>
+		<neo4j-ogm-core.version>4.0.10</neo4j-ogm-core.version>
+		<mongodb-driver-sync.version>4.11.2</mongodb-driver-sync.version>
 		<junit-jupiter.version>5.10.2</junit-jupiter.version>
 
 		<!-- provided dependencies -->
 		<jsr305.version>3.0.2</jsr305.version>
 
 		<!-- test dependencies -->
-		<micrometer-tracing.version>1.2.6-SNAPSHOT</micrometer-tracing.version>
+		<micrometer-tracing.version>1.2.6</micrometer-tracing.version>
 
 		<xstream.version>1.4.20</xstream.version>
 		<junit.version>4.13.2</junit.version>
@@ -103,14 +103,14 @@
 		<xmlunit.version>2.9.1</xmlunit.version>
 		<commons-io.version>2.15.1</commons-io.version>
 		<commons-dbcp2.version>2.11.0</commons-dbcp2.version>
-		<slf4j.version>2.0.12</slf4j.version>
+		<slf4j.version>2.0.13</slf4j.version>
 		<hsqldb.version>2.7.2</hsqldb.version>
 		<h2.version>2.2.224</h2.version>
 		<sqlite.version>3.45.1.0</sqlite.version>
 		<derby.version>10.16.1.1</derby.version>
 		<hana.version>2.18.13</hana.version>
 		<artemis.version>2.31.2</artemis.version>
-		<jaxb-core.version>4.0.4</jaxb-core.version>
+		<jaxb-core.version>4.0.5</jaxb-core.version>
 		<log4j.version>2.22.1</log4j.version>
 		<hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
 		<jakarta.el-api.version>5.0.1</jakarta.el-api.version>
